[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sounds/commentator/1.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/sounds/commentator/3.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/commentator/4.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/commentator/2.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/commentator/you_win.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/commentator/ready.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/commentator/you_lose.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/commentator/go.ogg" type="AudioStream" id=8]
[ext_resource path="res://src/actors/commentator/Commentator.gd" type="Script" id=9]
[ext_resource path="res://assets/sounds/commentator/7.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/commentator/9.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/commentator/6.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/commentator/8.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/commentator/10.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/commentator/5.ogg" type="AudioStream" id=15]

[node name="Commentator" type="Node2D"]
position = Vector2( 349.767, 3.70124 )
script = ExtResource( 9 )

[node name="Goal1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
bus = "Sfx"

[node name="Goal2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"

[node name="Goal3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "Sfx"

[node name="Goal4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="Goal5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
bus = "Sfx"

[node name="Goal6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
bus = "Sfx"

[node name="Goal7" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "Sfx"

[node name="Goal8" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
bus = "Sfx"

[node name="Goal9" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
bus = "Sfx"

[node name="Goal10" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
bus = "Sfx"

[node name="Go" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "Sfx"

[node name="Ready" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Sfx"

[node name="Win" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
bus = "Sfx"

[node name="Lose" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
bus = "Sfx"

[connection signal="finished" from="Ready" to="." method="_on_Ready_finished"]
